# bazel-test-xib

./: .bazelrc  .gitignore  BUILD.bazel  Makefile  WORKSPACE
.github/workflows/: tests.yml
Bazel/: BUILD.bazel
Bazel/HostApp/: AppDelegate.swift  AppInfo.plist
TestXIB/: CustomView.swift  Info.plist  TestXIB.h
TestXIB/CustomView/: CustomView.swift
TestXIB/CustomViewObjc/: CustomViewObjc.h  CustomViewObjc.m  CustomViewObjc.xib
TestXIBTests/: TestXIBTests.swift
