load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")

apple_framework(
    name = "TestXIB",
    srcs = glob([
        "TestXIB/**/*.h",
        "TestXIB/**/*.m",
        "TestXIB/**/*.swift",
    ]),
    data = glob(["TestXIB/**/*.xib"]),
    module_name = "TestXIB",
    visibility = ["//visibility:public"],
)

apple_framework(
    name = "TestXIBTestsLib",
    srcs = ["TestXIBTests/TestXIBTests.swift"],
    module_name = "TestXIBTests",
    deps = [":TestXIB"],
)

ios_unit_test(
    name = "TestXIBTests",
    minimum_os_version = "11.0",
    test_host = "//Bazel:HostApp",
    deps = [":TestXIBTestsLib"],
)
