load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "TestXIB",
    srcs = glob([
        "TestXIB/**/*.h",
        "TestXIB/**/*.m",
        "TestXIB/**/*.swift",
    ]),
    data = glob(["TestXIB/**/*.xib"]),
    module_name = "TestXIB",
    visibility = ["//visibility:public"],
)

apple_framework(
    name = "TestXIBTestsLib",
    srcs = ["TestXIBTests/TestXIBTests.swift"],
    deps = [":TestXIB"],
)

ios_unit_test(
    name = "TestXIBTests",
    minimum_os_version = "11.0",
    deps = [":TestXIBTestsLib"],
)
