load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "HostAppLib",
    srcs = ["HostApp/AppDelegate.swift"],
)

ios_application(
    name = "HostApp",
    bundle_id = "com.revolut.hostapp",
    families = ["iphone"],
    infoplists = ["HostApp/AppInfo.plist"],
    minimum_os_version = "11.0",
    deps = [":HostAppLib"],
    visibility = ["//visibility:public"],
)
